--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -74,12 +74,10 @@
       <option value="folder">Folder</option>
     </select>
   
-    <!-- File input (default visible) -->
     <div id="fileInputWrapper">
       <input type="file" id="fileInput" name="files" multiple>
     </div>
   
-    <!-- Folder input (hidden by default) -->
     <div id="folderInputWrapper" style="display:none;">
       <input type="file" id="folderInput" name="files" webkitdirectory directory multiple>
     </div>
@@ -101,5 +99,186 @@
   </table>
 
   <script src="script.js"></script>
+</body>
+</html>
+ -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>check file manager - Bootdey.com</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+</head>
+<body>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css" integrity="sha512-0/rEDduZGrqo4riUlwqyuHDQzp2D1ZCgH/gFIfjMIL5az8so6ZiXyhf1Rg8i6xsjv+z/Ubc4tt1thLigEcu6Ug==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<div class="container flex-grow-1 light-style container-p-y">
+    <div class="container-m-nx container-m-ny bg-lightest mb-3">
+        <ol class="breadcrumb text-big container-p-x py-3 m-0">
+            <li class="breadcrumb-item">
+                <a href="javascript:void(0)">home</a>
+            </li>
+            
+        </ol>
+
+    </div>
+
+    <div class="file-manager-container file-manager-col-view" id="fileContainer">
+        <div class="file-manager-row-header">
+            <div class="file-item-name pb-2">Filename</div>
+            <div class="file-item-changed pb-2">Changed</div>
+        </div>
+
+        <div class="file-item">
+            <div class="file-item-icon file-item-level-up fas fa-level-up-alt text-secondary"></div>
+            <a href="javascript:void(0)" class="file-item-name">
+                ..
+            </a>
+        </div>
+
+        <div class="file-item">
+            <div class="file-item-select-bg bg-primary"></div>
+            <label class="file-item-checkbox custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" />
+                <span class="custom-control-label"></span>
+            </label>
+            <div class="file-item-icon far fa-folder text-secondary"></div>
+            <a href="javascript:void(0)" class="file-item-name">
+                Images
+            </a>
+            <div class="file-item-changed">02/13/2018</div>
+            <div class="file-item-actions btn-group">
+                <button type="button" class="btn btn-default btn-sm rounded-pill icon-btn borderless md-btn-flat hide-arrow dropdown-toggle" data-toggle="dropdown"><i class="ion ion-ios-more"></i></button>
+                <div class="dropdown-menu dropdown-menu-right">
+                    <a class="dropdown-item" href="javascript:void(0)">Rename</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Move</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Copy</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Remove</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- <div class="file-item">
+            <div class="file-item-select-bg bg-primary"></div>
+            <label class="file-item-checkbox custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" />
+                <span class="custom-control-label"></span>
+            </label>
+            <div class="file-item-icon far fa-folder text-secondary"></div>
+            <a href="javascript:void(0)" class="file-item-name">
+                Scripts
+            </a>
+            <div class="file-item-changed">02/14/2018</div>
+            <div class="file-item-actions btn-group">
+                <button type="button" class="btn btn-default btn-sm rounded-pill icon-btn borderless md-btn-flat hide-arrow dropdown-toggle" data-toggle="dropdown"><i class="ion ion-ios-more"></i></button>
+                <div class="dropdown-menu dropdown-menu-right">
+                    <a class="dropdown-item" href="javascript:void(0)">Rename</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Move</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Copy</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Remove</a>
+                </div>
+            </div>
+        </div> -->
+
+        <div class="file-item">
+            <div class="file-item-select-bg bg-primary"></div>
+            <label class="file-item-checkbox custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" />
+                <span class="custom-control-label"></span>
+            </label>
+            <div class="file-item-icon far fa-folder text-secondary"></div>
+            <a href="javascript:void(0)" class="file-item-name">
+                Utils
+            </a>
+            <div class="file-item-changed">02/15/2018</div>
+            <div class="file-item-actions btn-group">
+                <button type="button" class="btn btn-default btn-sm rounded-pill icon-btn borderless md-btn-flat hide-arrow dropdown-toggle" data-toggle="dropdown"><i class="ion ion-ios-more"></i></button>
+                <div class="dropdown-menu dropdown-menu-right">
+                    <a class="dropdown-item" href="javascript:void(0)">Rename</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Move</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Copy</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Remove</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="file-item">
+            <div class="file-item-select-bg bg-primary"></div>
+            <label class="file-item-checkbox custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" />
+                <span class="custom-control-label"></span>
+            </label>
+            <div class="file-item-icon far fa-file-archive text-secondary"></div>
+            <a href="javascript:void(0)" class="file-item-name">
+                Archive.zip
+            </a>
+            <div class="file-item-changed">02/16/2018</div>
+            <div class="file-item-actions btn-group">
+                <button type="button" class="btn btn-default btn-sm rounded-pill icon-btn borderless md-btn-flat hide-arrow dropdown-toggle" data-toggle="dropdown"><i class="ion ion-ios-more"></i></button>
+                <div class="dropdown-menu dropdown-menu-right">
+                    <a class="dropdown-item" href="javascript:void(0)">Rename</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Move</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Copy</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Remove</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="file-item">
+            <div class="file-item-select-bg bg-primary"></div>
+            <label class="file-item-checkbox custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" />
+                <span class="custom-control-label"></span>
+            </label>
+            <div class="file-item-icon fab fa-js text-secondary"></div>
+            <a href="javascript:void(0)" class="file-item-name">
+                Build.js
+            </a>
+            <div class="file-item-changed">02/17/2018</div>
+            <div class="file-item-actions btn-group">
+                <button type="button" class="btn btn-default btn-sm rounded-pill icon-btn borderless md-btn-flat hide-arrow dropdown-toggle" data-toggle="dropdown"><i class="ion ion-ios-more"></i></button>
+                <div class="dropdown-menu dropdown-menu-right">
+                    <a class="dropdown-item" href="javascript:void(0)">Rename</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Move</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Copy</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Remove</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="file-item">
+            <div class="file-item-select-bg bg-primary"></div>
+            <label class="file-item-checkbox custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" />
+                <span class="custom-control-label"></span>
+            </label>
+            <div class="file-item-icon far fa-file-alt text-secondary"></div>
+            <a href="javascript:void(0)" class="file-item-name">
+                README.txt
+            </a>
+            <div class="file-item-changed">02/26/2018</div>
+            <div class="file-item-actions btn-group">
+                <button type="button" class="btn btn-default btn-sm rounded-pill icon-btn borderless md-btn-flat hide-arrow dropdown-toggle" data-toggle="dropdown"><i class="ion ion-ios-more"></i></button>
+                <div class="dropdown-menu dropdown-menu-right">
+                    <a class="dropdown-item" href="javascript:void(0)">Rename</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Move</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Copy</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Remove</a>
+                </div>
+            </div>
+        </div>
+
+        
+    </div>
+</div>
+<script src="script.js"></script>
+<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript">
+	
+</script>
 </body>
 </html>
